fix sprint 7 push